# fastalloc

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  ERROR_HANDLING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SAFETY.md  SECURITY.md  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: benchmark.yml  ci.yml  pre-release.yml  release.yml
.gitlab/ci/: benchmark.yml  deploy.yml  lint.yml  security.yml  test.yml
benches/: allocation_speed.rs  comparison.rs  deallocation_speed.rs  fragmentation.rs  multithreaded.rs  real_world.rs
docs/: architecture.md  contributing.md  migration_guide.md  performance_guide.md
examples/: async_usage.rs  basic_usage.rs  custom_initialization.rs  game_entities.rs  particle_system.rs  server_connections.rs  statistics.rs  thread_local.rs
scripts/: benchmark.sh  miri_check.sh  release_checklist.sh  test_all.sh
src/: error.rs  lib.rs  main.rs  traits.rs  utils.rs
src/allocator/: bitmap.rs  freelist.rs  mod.rs  stack.rs
src/config/: builder.rs  growth_strategy.rs  initialization.rs  mod.rs
src/handle/: mod.rs  owned.rs  shared.rs  weak.rs
src/pool/: fixed.rs  growing.rs  mod.rs  thread_local.rs  thread_safe.rs
src/stats/: collector.rs  mod.rs  reporter.rs
tests/integration/: basic_operations.rs  edge_cases.rs  growth_behavior.rs  memory_leaks.rs  thread_safety.rs
